--- a/asteroid.html
+++ b/asteroid.html
@@ -53,7 +53,7 @@
 #s11            { left:30px;top:40px; }
 #s0                { left:10px;top:10px; }
 
-.game           { border: 1px solid #777; float: left; height: 480px; left: 25%; position: absolute; top: 50px; width: 50%;overflow: hidden; background-color:#333;}
+.game           { border: 1px solid #777; float: left; height: 480px; left: 12.5%; position: absolute; top: 50px; width: 75%;overflow: hidden; background-color:#333;}
 </style>
 
 <body>
@@ -77,6 +77,7 @@
     </span>-->
     <span class="spaceship" id="spaceship"></span>
 </div>
+<div class="log"><ul></ul></div>
 <div id="images"></div>
 
 .
