--- a/asteroid.html
+++ b/asteroid.html
@@ -53,7 +53,7 @@
 #s11            { left:30px;top:40px; }
 #s0                { left:10px;top:10px; }
 
-.game           { border: 1px solid #777; float: left; height: 480px; left: 12.5%; position: absolute; top: 50px; width: 75%;overflow: hidden; background-color:#333;}
+.game           { border: 1px solid #777; float: left; height: 480px; left: 25%; position: absolute; top: 50px; width: 50%;overflow: hidden; background-color:#333;}
 </style>
 
 <body>
@@ -94,6 +94,7 @@ $(document).ready(function () {
    $(document).crMeteor("#meteor5",10);
    $(document).crSpaceship("#spaceship",10);
 
+   $(document).runGame(".game");
 });
 
 </script>
