--- a/asteroid.html
+++ b/asteroid.html
@@ -6,7 +6,7 @@
     <script src="js/meteor.js"></script>
 </head>
 <style>
-.game>span { display: block; position: absolute}
+.game>span, .game>b { display: block; position: absolute}
 .game>span .part       { display:block;position:absolute;visibility: visible}
 
 .h1             { border-right: 10px solid; border-top: 10px solid transparent; }
@@ -54,7 +54,9 @@
 #s9             { left:10px;top:40px; }
 #s10            { left:20px;top:40px; }
 #s11            { left:30px;top:40px; }
-#s0                { left:10px;top:10px; }
+#s0             { left:10px;top:10px; }
+
+.bullet         { border-color: #f00 transparent transparent;border-radius: 30px 30px 0 0;border-style: solid;border-width: 20px 4px 0;}
 
 .game           { border: 1px solid #777; float: left; height: 480px; left: 25%; position: absolute; top: 50px; width: 970px;overflow: hidden; background-color:#333;}
 </style>
