Bullet moving added
Currently working on collision, seems to be an error with global vars or
something?

--- a/asteroid.html
+++ b/asteroid.html
@@ -39,6 +39,7 @@
 #meteor1 .part {
     border-color: #00FF00;
 }
+#spaceship      { z-index:999;}
 
 #s1             { left:0;top:0; }
 #s2             { left:10px;top:0; }
