--- a/asteroid.html
+++ b/asteroid.html
@@ -35,10 +35,7 @@
 
 .d5.h1, .d5.h4  {border-right-color:#333;}
 .d5.h2, .d5.h3  {border-left-color:#333;}
-#meteor1  { left:300px; top:220px;}
-#meteor1 .part {
-    border-color: #00FF00;
-}
+
 #spaceship      { z-index:999;}
 
 #s1             { left:0;top:0; }
@@ -56,6 +53,7 @@
 #s10            { left:20px;top:40px; }
 #s11            { left:30px;top:40px; }
 #s0             { left:10px;top:10px; }
+.debug           { width:0; height:0; border:5px solid #f00; border-radius:10px; display:block; position:absolute; }
 
 .bullet         { border-color: #f00 transparent transparent;border-radius: 30px 30px 0 0;border-style: solid;border-width: 20px 4px 0;}
 
@@ -84,18 +82,15 @@
     <span class="spaceship" id="spaceship"></span>
 </div>
 <div class="log"><ul></ul></div>
-<div id="images"></div>
 
-.
 <script>//$(".meteor").rotate(45);
 //         alert( "Hello, World!");
 
 $(document).ready(function () {
    $(document).setGameConfig(".game");
 
-   $(document).crMeteor("#meteor1",10);
-   $(document).crMeteor("#meteor2",10);
-   $(document).crMeteor("#meteor3",10);
+   $(document).crMeteor("#meteor1",20);
+   $(document).crMeteor("#meteor2",20);
    $(document).crSpaceship("#spaceship",10);
 
    $(document).runGame(".game");
