--- a/asteroid.html
+++ b/asteroid.html
@@ -2,7 +2,7 @@
 <head>
     <title>Test</title>
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script src="http://www.horloge.nl/js/jQueryRotateCompressed-2-1.js" ></script>
+    <script src="js/jQueryRotateCompressed.js"></script>
     <script src="js/meteor.js"></script>
 </head>
 <style>
