--- a/asteroid.html
+++ b/asteroid.html
@@ -57,7 +57,7 @@
 
 .bullet         { border-color: #f00 transparent transparent;border-radius: 30px 30px 0 0;border-style: solid;border-width: 20px 4px 0;}
 
-.game           { border: 1px solid #777; float: left; height: 480px; left: 25%; position: absolute; top: 50px; width: 970px;overflow: hidden; background-color:#333;}
+.game           { border: 1px solid #777; float: left; height: 100vh; left: 0%; position: absolute; top: 0px; width: 100vw;overflow: hidden; background-color:#333;}
 </style>
 
 <body>
