--- a/asteroid.html
+++ b/asteroid.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-    <title>Test</title>
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <title>Asteroids</title>
+    <script src="js/jquery-1.9.1.js"></script>
     <script src="js/jQueryRotateCompressed.js"></script>
     <script src="js/meteor.js"></script>
 </head>
